<resources>
    <string name="app_name">Read Book Vip Java</string>

    <!-- action -->
    <string name="action_ok">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Update</string>
    <string name="action_read">Read</string>
    <string name="action_delete">Delete</string>

    <!-- Hint -->
    <string name="hint_book_name">Name…</string>

    <!-- Label -->
    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="label_category">Category</string>
    <string name="label_other_feature">Other features</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_history">History</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_contact">Contact</string>
    <string name="label_search">Search</string>
    <string name="label_label_category">Category:</string>

    <string name="label_feedback_name">Full name (*)</string>
    <string name="label_feedback_email">Email</string>
    <string name="label_feedback_phone">Phone</string>
    <string name="label_feedback_comment">Comment (*)</string>
    <string name="label_send_feedback">Send</string>

    <string name="view_all">View all</string>
    <string name="label_all_books">All books</string>
    <string name="label_new_books">New books</string>

    <!-- Message -->
    <string name="msg_please_waiting">Please wait…</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="msg_name_require">Please enter full name</string>
    <string name="msg_comment_require">Please enter your comment</string>
    <string name="msg_send_feedback_success">Feedback sent successfully, thank you very much!</string>
    <string name="msg_file_error">File error, please try again</string>
    <string name="msg_save_history_confirm">Do you want to save the reading history?</string>
    <string name="msg_confirm_delete_history_all">Are you sure you want to delete all reading history?</string>
    <string name="msg_history_item_options">What do you want to do with this book?</string>

    <!-- Module user -->
    <string name="label_user_name">Email</string>
    <string name="label_old_password">Old password</string>
    <string name="label_new_password">New password</string>
    <string name="label_confirm_new_password">Confirm new password</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_register">Sign Up</string>
    <string name="label_have_account">Already have an account?</string>
    <string name="label_have_not_account">Don\'t have an account?</string>
    <string name="label_login">Sign In</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_reset_password">Reset password</string>
    <string name="label_change_password">Change password</string>
    <string name="label_account">Account</string>

    <!-- Hint -->
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_password_old">Please enter old password…</string>
    <string name="hint_password_new">Please enter new password…</string>
    <string name="hint_password_confirm">Please enter confirm new password…</string>

    <string name="msg_email_require">Please enter your email</string>
    <string name="msg_password_require">Please enter your password</string>
    <string name="msg_email_invalid">Your email is invalid</string>
    <string name="msg_login_error">Login failed, please try again</string>
    <string name="msg_reset_password_successfully">Password reset successful, please check your email</string>
    <string name="msg_register_error">Registration failed, please try again</string>
    <string name="msg_old_password_require">Please enter old password</string>
    <string name="msg_new_password_require">Please enter new password</string>
    <string name="msg_confirm_password_require">Please enter confirm new password</string>
    <string name="msg_old_password_invalid">The old password is incorrect, please try again</string>
    <string name="msg_confirm_password_invalid">Confirm new password don\'t match</string>
    <string name="msg_new_password_invalid">New password matches old password</string>
    <string name="msg_change_password_successfully">Change password successfully</string>
    <string name="msg_change_password_fail">Password change failed, please log out and try again</string>
    <string name="msg_get_date_error">General error, please try again later</string>

    <!-- Menu -->
    <string name="menu_category">Category</string>
    <string name="menu_book">Book</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_advertisement">Advertisement</string>
    <string name="menu_account">Account</string>

    <string name="hint_search_name">Name…</string>
    <string name="label_featured">Featured:</string>
    <string name="label_category_admin">Category:</string>
    <string name="msg_delete_title">Confirm delete</string>
    <string name="label_name">Name(*)</string>
    <string name="label_image">Image(*)</string>
    <string name="label_banner">Banner(*)</string>
    <string name="label_book_category">Category(*)</string>
    <string name="label_add_category">Add category</string>
    <string name="label_update_category">Update category</string>
    <string name="label_book_link_url">Link url PDF(*)</string>
    <string name="label_book_featured">Featured</string>
    <string name="label_add_book">Add book</string>
    <string name="label_update_book">Update book</string>
    <string name="label_book_description">Description</string>
    <string name="label_book_tags">Tags</string>
    <string name="label_book_status">Status</string>
    <string name="label_book_cover_image">Cover Image(*)</string>
    <string name="label_book_chapters">Chapters</string>
    <string name="status_ongoing">Ongoing</string>
    <string name="status_completed">Completed</string>

    <string name="msg_confirm_delete">Are you sure you want to delete this item?</string>
    <string name="msg_edit_category_success">Update category successfully</string>
    <string name="msg_add_category_success">Add category successfully</string>
    <string name="msg_delete_category_successfully">Delete category successfully</string>
    <string name="msg_input_name_require">Please enter name</string>
    <string name="msg_input_image_require">Please enter image</string>
    <string name="msg_input_banner_require">Please enter banner</string>
    <string name="msg_input_url_require">Please enter the url (PDF format)</string>
    <string name="msg_edit_book_success">Update book successfully</string>
    <string name="msg_add_book_success">Add book successfully</string>
    <string name="msg_delete_book_successfully">Delete book successfully</string>

    <!-- Advertisement -->
    <string name="label_advertisement">Advertisement</string>
    <string name="label_add_advertisement">Add advertisement</string>
    <string name="label_edit_advertisement">Update advertisement</string>
    <string name="label_ad_title">Title(*)</string>
    <string name="label_ad_video">Video(*)</string>
    <string name="label_ad_thumbnail">Thumbnail</string>
    <string name="label_ad_active">Active</string>
    <string name="label_ad_inactive">Inactive</string>
    <string name="label_ad_stats">Statistics</string>
    <string name="label_ad_list">List</string>
    <string name="label_ad_total_views">Total views</string>
    <string name="label_ad_top_advertisement">Top advertisement</string>
    <string name="label_ad_views_today">Views today</string>
    <string name="label_ad_views_this_week">Views this week</string>
    <string name="label_ad_views_this_month">Views this month</string>
    <string name="label_ad_completion_rate">Completion rate</string>
    <string name="label_ad_skip_rate">Skip rate</string>
    <string name="label_ad_view_count">Views</string>
    <string name="msg_ad_upload_success">Upload advertisement successfully</string>
    <string name="msg_ad_delete_success">Delete advertisement successfully</string>
    <string name="msg_ad_edit_success">Update advertisement successfully</string>
    <string name="msg_ad_video_require">Please select video</string>
    <string name="msg_ad_title_require">Please enter title</string>
    <string name="action_skip_ad">Skip</string>
    <string name="action_close_ad">Close</string>
    
    <!-- Empty & Error States -->
    <string name="msg_no_data">No data available</string>
    <string name="msg_no_data_description">There is no data to display at the moment</string>
    <string name="msg_no_books">No books found</string>
    <string name="msg_no_categories">No categories found</string>
    <string name="msg_error_occurred">Oops! Something went wrong</string>
    <string name="msg_network_error">Please check your internet connection and try again</string>
    <string name="action_retry">Retry</string>
    <string name="msg_loading">Loading...</string>
</resources>