<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/img_empty"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:alpha="0.3"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_book" />

    <TextView
        android:id="@+id/tv_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/msg_no_data"
        android:textColor="@color/colorTextNoData"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/msg_no_data_description"
        android:textColor="@color/colorTextNoData"
        android:textSize="14sp" />

</LinearLayout>
